fix: brighten text in dark mode a bit

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -12,7 +12,7 @@
 
   --dark-color-primary: #76b6ef;
   --dark-color-secondary: #d597e8;
-  --dark-color-text: #bac3c5;
+  --dark-color-text: #c5ccce;
   --dark-color-text-offset: #afb3b6;
   --dark-color-background: #1a1d23;
   --dark-color-background-offset: #1e222a;
